force-app/main/default/objects/Syteline_VendAddrold__x/Syteline_VendAddrold__x.object-meta.xml
<CustomObject>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>dw_syteline$vendaddr</externalName>
    <label>Syteline_VendAddr_old</label>
    <pluralLabel>Syteline_VendAddrOlder</pluralLabel>
</CustomObject>