force-app/main/default/objects/Syteline_VendAddrold__x/fields/addr_1__c.field-meta.xml
<CustomField>
    <fullName>addr_1__c</fullName>
    <description>addr_1</description>
    <externalDeveloperName>addr_1</externalDeveloperName>
    <label>addr_1</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>