force-app/main/default/objects/Syteline_VendAddrold__x/fields/addr_4__c.field-meta.xml
<CustomField>
    <fullName>addr_4__c</fullName>
    <description>addr_4</description>
    <externalDeveloperName>addr_4</externalDeveloperName>
    <label>addr_4</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>