force-app/main/default/objects/Syteline_VendAddrold__x/fields/in_workflow__c.field-meta.xml
<CustomField>
    <fullName>in_workflow__c</fullName>
    <description>in_workflow</description>
    <externalDeveloperName>in_workflow</externalDeveloperName>
    <label>in_workflow</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>