force-app/main/default/objects/Syteline_VendAddrold__x/fields/internal_email_addr__c.field-meta.xml
<CustomField>
    <fullName>internal_email_addr__c</fullName>
    <description>internal_email_addr</description>
    <externalDeveloperName>internal_email_addr</externalDeveloperName>
    <label>internal_email_addr</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>