force-app/main/default/objects/Syteline_VendAddrold__x/fields/pay_hold_dt__c.field-meta.xml
<CustomField>
    <fullName>pay_hold_dt__c</fullName>
    <description>pay_hold_dt</description>
    <externalDeveloperName>pay_hold_dt</externalDeveloperName>
    <label>pay_hold_dt</label>
    <type>Date</type>
</CustomField>