force-app/main/default/objects/Syteline_VendAddrold__x/fields/pay_hold_user__c.field-meta.xml
<CustomField>
    <fullName>pay_hold_user__c</fullName>
    <description>pay_hold_user</description>
    <externalDeveloperName>pay_hold_user</externalDeveloperName>
    <label>pay_hold_user</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>