force-app/main/default/objects/Syteline_VendAddrold__x/fields/telex_nbr__c.field-meta.xml
<CustomField>
    <fullName>telex_nbr__c</fullName>
    <description>telex_nbr</description>
    <externalDeveloperName>telex_nbr</externalDeveloperName>
    <label>telex_nbr</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>