force-app/main/default/objects/Syteline_VendAddrold__x/fields/uf_email__c.field-meta.xml
<CustomField>
    <fullName>uf_email__c</fullName>
    <description>uf_email</description>
    <externalDeveloperName>uf_email</externalDeveloperName>
    <label>uf_email</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>